@@ -1,5 +1,7 @@
 2010-05-03  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-basic.el: Pulse setting.
+
 	* init-site.el: Disable visual-studio-bookmarks, use bm instead.
 
 	* init-misc.el: Add bm.
